[gd_scene load_steps=27 format=3 uid="uid://dd0fmng7hosa1"]

[ext_resource type="Script" uid="uid://bpewqmw7sw58u" path="res://Enemies/Scripts/enemy.gd" id="1_dgr3s"]
[ext_resource type="Script" uid="uid://dmksxpjut2wtt" path="res://Enemies/Scripts/enemy_state_machine.gd" id="2_ay3vf"]
[ext_resource type="Script" uid="uid://cjsq3ajk6gigi" path="res://Enemies/Scripts/States/enemy_state_idle.gd" id="3_3oce8"]
[ext_resource type="Script" uid="uid://b4unweqhxuu8q" path="res://Enemies/Scripts/States/enemy_state_wander.gd" id="4_ac6a8"]
[ext_resource type="Script" uid="uid://cqg3svyj0hatr" path="res://Enemies/Scripts/States/enemy_state_stun.gd" id="5_77nmr"]
[ext_resource type="Script" uid="uid://ddm7k0okmilg5" path="res://Enemies/Scripts/States/enemy_state_destroyed.gd" id="6_f3wku"]
[ext_resource type="Script" uid="uid://bl06e4y3xddbq" path="res://Enemies/Scripts/drop_data.gd" id="7_lvhkj"]
[ext_resource type="Resource" uid="uid://buahagwpd0niq" path="res://items/scraps.tres" id="8_t4jts"]
[ext_resource type="Resource" uid="uid://g2fodkxuce8k" path="res://items/shoddy_decoder.tres" id="9_pcyyc"]
[ext_resource type="PackedScene" uid="uid://bfdpeocn58hen" path="res://player/healthbar/hurtbox/hurt_box.tscn" id="10_cu2p6"]
[ext_resource type="Script" uid="uid://cjkkk04ahs1cp" path="res://Enemies/Scripts/States/enemy_state_chase.gd" id="10_egddf"]
[ext_resource type="Resource" uid="uid://c67k1yrd0vwfw" path="res://items/potion.tres" id="10_r3i0u"]
[ext_resource type="Script" uid="uid://d133nvuuiegwk" path="res://player/healthbar/hitbox/hitbox.gd" id="11_q0lai"]
[ext_resource type="PackedScene" uid="uid://85awlrntq20i" path="res://Enemies/vision_area.tscn" id="13_3xcr1"]
[ext_resource type="AudioStream" uid="uid://djwxgb72imxsj" path="res://Global/sounds/flutter.ogg" id="14_3xcr1"]
[ext_resource type="AudioStream" uid="uid://dr4ev2hd1wmv3" path="res://Global/sounds/metal_damaged.ogg" id="15_fuxiv"]
[ext_resource type="AudioStream" uid="uid://de2nr4ia66uru" path="res://Global/sounds/exxplosion.ogg" id="16_hvprn"]
[ext_resource type="AudioStream" uid="uid://yot6ux76imc5" path="res://title_scene/resources/shing.wav" id="18_p257j"]

[sub_resource type="Resource" id="Resource_t1krp"]
script = ExtResource("7_lvhkj")
item = ExtResource("8_t4jts")
probability = 60.0
max_amount = 10
metadata/_custom_type_script = "uid://bl06e4y3xddbq"

[sub_resource type="Resource" id="Resource_nsi17"]
script = ExtResource("7_lvhkj")
item = ExtResource("9_pcyyc")
probability = 5.0
metadata/_custom_type_script = "uid://bl06e4y3xddbq"

[sub_resource type="Resource" id="Resource_p257j"]
script = ExtResource("7_lvhkj")
item = ExtResource("10_r3i0u")
probability = 7.0
metadata/_custom_type_script = "uid://bl06e4y3xddbq"

[sub_resource type="Gradient" id="Gradient_vswm2"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_byu67"]
gradient = SubResource("Gradient_vswm2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wwfkb"]
size = Vector2(46, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8fnr"]
size = Vector2(54.5, 41)

[sub_resource type="CircleShape2D" id="CircleShape2D_fuxiv"]
radius = 240.00209

[node name="Goblin" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 3
script = ExtResource("1_dgr3s")
xp_reward = 10

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("2_ay3vf")

[node name="Idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("after_idle_state")]
script = ExtResource("3_3oce8")
state_duration_min = 0.1
after_idle_state = NodePath("../Wander")

[node name="Wander" type="Node" parent="EnemyStateMachine"]
script = ExtResource("4_ac6a8")

[node name="Stun" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("5_77nmr")
next_state = NodePath("../Chase")

[node name="Destroy" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_f3wku")
drops = Array[ExtResource("7_lvhkj")]([SubResource("Resource_t1krp"), SubResource("Resource_nsi17"), SubResource("Resource_p257j")])

[node name="Chase" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("vision_area", "attack_area", "next_state")]
script = ExtResource("10_egddf")
chase_speed = 400.0
vision_area = NodePath("../../VisionArea")
attack_area = NodePath("../../HurtBox")
state_aggro_duration = 2.0
next_state = NodePath("../Idle")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.0000002, 0)
scale = Vector2(0.17578125, 38)
texture = SubResource("GradientTexture1D_byu67")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 12)
shape = SubResource("RectangleShape2D_wwfkb")

[node name="HurtBox" parent="." instance=ExtResource("10_cu2p6")]
collision_layer = 8
damage = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1.25, 0)
shape = SubResource("RectangleShape2D_n8fnr")
debug_color = Color(1, 0.9407341, 0.5394591, 0.41960785)

[node name="DestroyEffectSprite" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="DestroyEffectSprite"]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256
script = ExtResource("11_q0lai")
metadata/_custom_type_script = "uid://d133nvuuiegwk"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1.25, 0)
shape = SubResource("RectangleShape2D_n8fnr")
debug_color = Color(0.59934294, 0.99217784, 0.5678647, 0.41960785)

[node name="VisionArea" parent="." instance=ExtResource("13_3xcr1")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionArea"]
visible = false
polygon = PackedVector2Array(-32, 0, 32, 0, 256, 256, -256, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_fuxiv")

[node name="WallDetect" type="RayCast2D" parent="."]
rotation = -1.5707964

[node name="Wingsflutter" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_3xcr1")

[node name="Damaged" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_fuxiv")
volume_db = 17.348

[node name="Destroyed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_hvprn")
volume_db = 24.0

[node name="Slashpre" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_p257j")
volume_db = 5.57
